# borromean

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  clippy.toml  journal.md  rumdl.toml  rust-toolchain.toml  rustfmt.toml  tasks.sh
.cargo/: config.toml  mutants-embedded-storage.toml  mutants-file-backing.toml  mutants-perf-counters.toml  mutants.toml
.duvet/: config.toml
.duvet/policy/: config.toml
benches/: file_backing_mmap.rs
docs/: architecture-and-api.md  core-storage-concepts.md  implementing-a-collection.md
models/: storage_low_level.qnt  storage_low_level_checks.qnt  transaction_free_recovery.qnt
models/archive/core-pilot/: README.md  capacity_preflight.qnt  core_composition.qnt  fifo_wear.qnt  free_basis_publication.qnt  legacy_recovery_bounded.qnt  ordered_cleanup.qnt  ownership_refinement.qnt  package-lock.json  package.json  reclaim_reuse.qnt  region_ownership.qnt  storage_mechanical.qnt  tlc-config.json  transaction_atomicity.qnt  transaction_views.qnt  verify.sh  wal_rotation.qnt  writer_exclusion.qnt
perf/: file_backing.toml  file_backing_4k.toml  file_backing_hot_insert_sync_audit.toml  file_backing_hot_single_update_sync_audit.toml  file_backing_hot_update_sync_audit.toml  file_backing_memory_profile.toml  file_backing_mixed.toml  file_backing_mixed_update.toml  file_backing_mixed_update_4k.toml  file_backing_read_hits.toml  file_backing_read_hits_4k.toml  file_backing_read_misses.toml  file_backing_read_misses_4k.toml  file_backing_smoke.toml  file_backing_update_hot.toml  file_backing_update_hot_4k.toml  profile_memory_insert.toml  profile_memory_mixed_update.toml  profile_memory_read_hits.toml  profile_memory_read_misses.toml  profile_memory_update_hot.toml
proptest-regressions/collections/map/: tests.txt
scripts/: calibrate_perf_matrix.py  summarize_memory_profile_jsons.py  summarize_perf_matrix_jsons.py  test_calibrate_perf_matrix.py  test_summarize_perf_matrix_jsons.py  test_trace_review.py  trace_review.py  verify.sh
spec/: channel.md  embedded-storage.md  file.md  implementation-plan.md  implementation-policy.md  implementation.md  map.md  mock.md  object-log.md  ring.md  traceability-report.md
spec/archive/core-pilot/: 00-goals-locality.md  01-ownership.md  02-durability-io.md  03-format-wal.md  04-free-space.md  05-transactions.md  06-recovery-maintenance.md  07-api-memory.md  08-refinement.md  README.md  pilot-index.md
spec/core/: 000-system-narrative.md  001-vocabulary.md  authoring.md  decisions.md  thoughts.md  todo.md
spec/core/decisions/: authoring-and-process.md  main-wal.md  region-lifecycle.md  shared-vocabulary.md  storage-io-and-format.md  transactions.md
spec/core/design-questions/: frontier-capacity-preflight.md
spec/ring/: 00-introduction.md  01-theory.md  02-state-machines.md  03-collection-lifecycle.md  04-wal-records.md  05-disk-format.md  06-startup-replay.md  07-reclaim.md  08-durability-formatting.md  09-implementation-coverage.md  TEMP-transaction-free-recovery.md
src/: collections.rs  disk.rs  embedded_storage.rs  file_backing.rs  flash_io.rs  free_space.rs  lib.rs  mock.rs  mode.rs  op_future.rs  perf_metrics.rs  startup.rs  storage.rs  transaction_log.rs  vec_like.rs  wal_record.rs  workspace.rs
src/collections/: object_log.rs  wal.rs
src/collections/channel/: mod.rs  tests.rs
src/collections/map/: mod.rs  tests.rs
src/collections/object_log/: tests.rs
src/collections/wal/: mod.rs  tests.rs
src/disk/: tests.rs
src/embedded_storage/: tests.rs
src/file_backing/: tests.rs
src/free_space/: tests.rs
src/io/: mem_io.rs  mod.rs  tests.rs
src/mock/: tests.rs
src/startup/: tests.rs
src/storage/: tests.rs
src/tests/: lifecycle.rs  mod.rs  traceability.rs
src/tests/traceability/: api.rs  arch.rs  arithmetic.rs  audit.rs  collection.rs  core.rs  exec.rs  format.rs  io.rs  memory.rs  operation.rs  panic.rs  startup.rs
src/transaction_log/: tests.rs
src/vec_like/: tests.rs
src/wal_record/: tests.rs
tests/: traceability_audit_cli.rs
tools/: traceability_policy.rs
(+55 files in other folders)
