[package]
name = "borromean"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Efficient multi-collection storage for flash devices."
homepage = "https://github.com/moore/borromean"
repository = "https://github.com/moore/borromean"
readme = "README.md"
keywords = ["embeded", "nostd", "storage", "flash", "collections"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []
file-backing = ["std", "dep:libc", "dep:memmap2"]

[dependencies]
crc = "3.2.1"
heapless = { version = "0.8.0", features = ["serde"] }
libc = { version = "0.2", optional = true }
memmap2 = { version = "0.9", optional = true }
postcard = { version = "1.0.8", features = ["use-crc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
